Fixes after review, adding basic options parsing tests