@@ -19,10 +19,7 @@ package org.jetbrains.kotlin.daemon
 import junit.framework.TestCase
 import org.jetbrains.kotlin.cli.CliBaseTest
 import org.jetbrains.kotlin.integration.KotlinIntegrationTestBase
-import org.jetbrains.kotlin.rmi.CompileService
-import org.jetbrains.kotlin.rmi.CompilerId
-import org.jetbrains.kotlin.rmi.DaemonJVMOptions
-import org.jetbrains.kotlin.rmi.DaemonOptions
+import org.jetbrains.kotlin.rmi.*
 import org.jetbrains.kotlin.rmi.kotlinr.DaemonReportingTargets
 import org.jetbrains.kotlin.rmi.kotlinr.KotlinCompilerClient
 import org.jetbrains.kotlin.test.JetTestUtils
@@ -74,5 +71,34 @@ public class CompilerDaemonTest : KotlinIntegrationTestBase() {
 
         runDaemonCompilerTwice("hello.compile", "-include-runtime", File(getTestBaseDir(), "hello.kt").absolutePath, "-d", jar)
         run("hello.run", "-cp", jar, "Hello.HelloPackage")
+    }
+
+    public fun testDaemonJvmOptionsParsing() {
+        val backupJvmOptions = System.getProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY)
+        try {
+            System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, "-aaa,-bbb\\,ccc,-ddd,-Xmx200m,-XX:MaxPermSize=10k,-XX:ReservedCodeCacheSize=100,-xxx\\,yyy")
+            val opts = configureDaemonJVMOptions(inheritMemoryLimits = false)
+            TestCase.assertEquals("200m", opts.maxMemory)
+            TestCase.assertEquals("10k", opts.maxPermSize)
+            TestCase.assertEquals("100", opts.reservedCodeCacheSize)
+            TestCase.assertEquals(arrayListOf("aaa", "bbb,ccc", "ddd", "xxx,yyy"), opts.jvmParams)
+        }
+        finally {
+            backupJvmOptions?.let { System.setProperty(COMPILE_DAEMON_JVM_OPTIONS_PROPERTY, it) }
+        }
+    }
+
+    public fun testDaemonOptionsParsing() {
+        val backupJvmOptions = System.getProperty(COMPILE_DAEMON_OPTIONS_PROPERTY)
+        try {
+            System.setProperty(COMPILE_DAEMON_OPTIONS_PROPERTY, "runFilesPath=abcd,clientAliveFlagPath=efgh,autoshutdownIdleSeconds=1111")
+            val opts = configureDaemonOptions()
+            TestCase.assertEquals("abcd", opts.runFilesPath)
+            TestCase.assertEquals("efgh", opts.clientAliveFlagPath)
+            TestCase.assertEquals(1111, opts.autoshutdownIdleSeconds)
+        }
+        finally {
+            backupJvmOptions?.let { System.setProperty(COMPILE_DAEMON_OPTIONS_PROPERTY, it) }
+        }
     }
 }
